[gd_scene load_steps=13 format=2]

[ext_resource path="res://UIMain/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://UIMain/TroopTitle/Background.png" type="Texture2D" id=2]
[ext_resource path="res://Images/PersonPortrait/default-male-martial.jpg" type="Texture2D" id=3]
[ext_resource path="res://UIMain/TroopTitle/Flag.png" type="Texture2D" id=4]
[ext_resource path="res://UIMain/TroopTitle/Combativity.png" type="Texture2D" id=5]
[ext_resource path="res://UIMain/TroopTitle/Faction.png" type="Texture2D" id=6]
[ext_resource path="res://UIMain/TroopTitle/Morale.png" type="Texture2D" id=7]
[ext_resource path="res://Fonts/FZLB_GBK.TTF" type="FontFile" id=8]
[ext_resource path="res://UIMain/TroopTitle/ActionUndone.png" type="Texture2D" id=9]
[ext_resource path="res://UIMain/TroopTitle/FoodNormal.png" type="Texture2D" id=10]
[ext_resource path="res://UIMain/TroopTitle/TroopTitle.gd" type="Script" id=11]

[sub_resource type="FontFile" id=1]
size = 14
font_data = ExtResource( 8 )

[node name="TroopTitle" type="Control"]
offset_right = 90.0
offset_bottom = 56.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
offset_right = 90.0
offset_bottom = 56.0
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="Background"]
offset_top = 4.0
offset_right = 512.0
offset_bottom = 516.0
scale = Vector2( 0.1, 0.1 )
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Morale" type="TextureRect" parent="Background"]
offset_left = 48.0
offset_top = 40.0
offset_right = 132.0
offset_bottom = 49.0
mouse_filter = 2
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Combativity" type="TextureRect" parent="Background"]
offset_left = 48.0
offset_top = 48.0
offset_right = 132.0
offset_bottom = 55.0
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TroopQuantity" type="Label" parent="Background"]
offset_left = 52.0
offset_top = 38.0
offset_right = 90.0
offset_bottom = 56.0
text = "10000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderName" type="Label" parent="Background"]
offset_left = 48.0
offset_top = 22.0
offset_right = 90.0
offset_bottom = 36.0
text = "耒果田"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionStatus" type="TextureRect" parent="Background"]
offset_left = 68.2608
offset_top = 8.33923
offset_right = 80.2608
offset_bottom = 20.3392
mouse_filter = 2
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodStatus" type="TextureRect" parent="Background"]
offset_left = 52.0
offset_top = 8.0
offset_right = 64.0
offset_bottom = 22.0
mouse_filter = 2
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlagBackground" type="TextureRect" parent="."]
offset_top = -28.0
offset_right = 40.0
offset_bottom = 15.0
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlagFaction" type="TextureRect" parent="FlagBackground"]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlagText" type="Label" parent="FlagBackground"]
offset_left = 2.0
offset_top = 10.0
offset_right = 40.0
offset_bottom = 18.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "耒"
__meta__ = {
"_edit_use_anchors_": false
}
